--- a/project/expenses/templates/expenses/includes/expenses_delete_form.html
+++ b/project/expenses/templates/expenses/includes/expenses_delete_form.html
@@ -1,2 +1,2 @@
 {% load form %}
-{% generic_delete_form title='Išlaidų trinimas' update_container='ajax-content' %}
+{% generic_delete_form title='Išlaidų trinimas' update_container='expenses_list' %}
