renamed in books ajax-content -> book_list

--- a/project/books/templates/books/index.html
+++ b/project/books/templates/books/index.html
@@ -27,7 +27,7 @@
 </div>
 
 <div class="row mt-2">
-    <div id="ajax-content" class="col-lg-12">{{ book_list }}</div>
+    <div id="book_list" class="col-lg-12">{{ book_list }}</div>
 </div>
 
 <div class="row mt-2">
