--- a/project/books/templates/books/includes/books_delete_form.html
+++ b/project/books/templates/books/includes/books_delete_form.html
@@ -1,2 +1,2 @@
 {% load form %}
-{% generic_delete_form title='Knygos trinimas' update_container='ajax-content' %}
+{% generic_delete_form title='Knygos trinimas' update_container='book_list' %}
