--- a/project/books/templates/books/includes/books_form.html
+++ b/project/books/templates/books/includes/books_form.html
@@ -1,3 +1,2 @@
 {% load form %}
-{% generic_form title='Knyga' update_container='ajax-content' %}
-
+{% generic_form title='Knyga' update_container='book_list' %}
