--- a/project/books/templates/books/includes/reload_stats.html
+++ b/project/books/templates/books/includes/reload_stats.html
@@ -1,2 +1,3 @@
 <div id="chart_readed_books">{{ chart_readed_books }}</div>
 <div id="info_row">{{ info_row }}</div>
+<div id="book_list" class="col-lg-12">{{ book_list }}</div>
