--- a/project/expenses/templates/expenses/index.html
+++ b/project/expenses/templates/expenses/index.html
@@ -31,16 +31,16 @@
         <div id="expenses_list">{{ expenses_list }}</div>
     </div>
 
-    <div class="col-lg-4 px-1">
+    <div class="col-lg-4">
         <div class="row my-2">
-            <div class="col text-right">
+            <div class="col-lg-12 px-2 text-right">
                 <button type="button" class="btn btn-sm btn-outline-success pr-2 js-create" data-url="{{ url_expenses_type_new }}"><i class="bi bi-plus"></i>Išlaidų rūšį</button>
                 <button type="button" class="btn btn-sm btn-outline-success pr-2 js-create" data-url="{{ url_expenses_name_new }}"><i class="bi bi-plus"></i>Išlaidų pavadinimą</button>
             </div>
         </div>
 
         <div class="row">
-            <div id="ajax-content-categories" class="col">{{ categories }}</div>
+            <div id="ajax-content-categories" class="col-lg-12 px-2">{{ categories }}</div>
         </div>
     </div>
 </div>
