--- a/project/incomes/templates/incomes/index.html
+++ b/project/incomes/templates/incomes/index.html
@@ -23,15 +23,15 @@
         <div id="ajax-content">{{ incomes }}</div>
     </div>
 
-    <div class="col-lg-4 px-1">
+    <div class="col-lg-4">
         <div class="row my-2">
-            <div class="col text-right">
+            <div class="col-lg-12 px-2 text-right">
                 <button type="button" class="btn btn-sm btn-outline-success js-create pr-2" data-url="{{ url_incomes_type_new }}"><i class="bi bi-plus"></i>Pajamų rūšį</button>
             </div>
         </div>
 
         <div class="row">
-            <div id="ajax-content-categories" class="col">{{ categories }}</div>
+            <div id="ajax-content-categories" class="col-lg-12 px-2">{{ categories }}</div>
         </div>
     </div>
 </div>
