--- a/project/savings/templates/savings/index.html
+++ b/project/savings/templates/savings/index.html
@@ -33,26 +33,26 @@
         </div><!-- End Pensions -->
     </div>
 
-    <div class="col-lg-4 px-1">
+    <div class="col-lg-4">
         <!-- Funds Types -->
         <div class="row mt-2">
-            <div class="col text-right">
+            <div class="col-lg-12 px-2 text-right">
                 <button type="button" class="btn btn-sm btn-outline-success js-create pr-2" data-url="{{ url_savings_type_new }}"><i class="bi bi-plus"></i> Fondą</button>
             </div>
         </div>
         <div class="row mt-2">
-            <div id="ajax-content-categories" class="col">{{ categories }}</div>
+            <div id="ajax-content-categories" class="col-lg-12 px-2">{{ categories }}</div>
         </div>
         <!-- End Funds Types -->
 
         <!-- Pension Types -->
         <div class="row mt-4">
-            <div class="col text-right">
+            <div class="col-lg-12 px-2 text-right">
                 <button type="button" class="btn btn-sm btn-outline-success js-create pr-2" data-url="{{ url_pensions_type_new }}"><i class="bi bi-plus"></i> Pensijų fondą</button>
             </div>
         </div>
         <div class="row mt-2">
-            <div id="pension-categories" class="col">{{ pension_type }}</div>
+            <div id="pension-categories" class="col-lg-12 px-2">{{ pension_type }}</div>
         </div>
         <!-- End Pension Types -->
     </div>
