--- a/project/transactions/templates/transactions/index.html
+++ b/project/transactions/templates/transactions/index.html
@@ -51,18 +51,18 @@
     </div>
 
     <!-- left side -->
-    <div class="col-lg-4 px-1">
+    <div class="col-lg-4">
         <div class="row mt-2">
-            <div class="col">
+            <div class="col-lg-2">
                 <h6>&nbsp;</h6>
             </div>
-            <div class="col text-right">
+            <div class="col-lg-10 px-2 text-right">
                 {% url 'accounts:accounts_new' as url_accounts %}
                 <button type="button" class="btn btn-sm btn-outline-success js-create pr-2" data-url="{{ url_accounts }}"><i class="bi bi-plus"></i> Sąskaitą</button>
             </div>
         </div>
         <div class="row mt-2">
-            <div id="ajax-content-categories" class="col">{{ categories }}</div>
+            <div id="ajax-content-categories" class="col-lg-12 px-2">{{ categories }}</div>
         </div>
     </div>
 </div>
