chart_balance lengend style tweaks: no border; align to right

--- a/project/bookkeeping/templates/bookkeeping/includes/chart_balance.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_balance.html
@@ -16,10 +16,10 @@
         },
         legend: {
             layout: 'horizontal',
-            align: 'center',
+            align: 'right',
             verticalAlign: 'top',
             floating: true,
-            borderWidth: 1,
+            borderWidth: 0,
         },
         xAxis: {
             min: 0.4,
