integration tests for Expenses

--- a/project/expenses/templates/expenses/index.html
+++ b/project/expenses/templates/expenses/index.html
@@ -24,7 +24,7 @@
                 <button id="13" type="button" data-url="{% url 'expenses:expenses_list' %}" class="btn btn-sm btn-month js-filter ml-2 {% if current_month|slugify == 13|slugify %}btn-info{% endif %}">Visi įrašai</button>
             </div>
             <div class="col-sm-2 text-right">
-                <button type="button" class="btn btn-sm btn-outline-success pr-2 js-create" data-url="{{ url_expense_new }}"><i class="bi bi-plus"></i>Išlaidas</button>
+                <button type="button" id="insert_expense" class="btn btn-sm btn-outline-success pr-2 js-create" data-url="{{ url_expense_new }}"><i class="bi bi-plus"></i>Išlaidas</button>
             </div>
         </div>
         <div id="search_form_data" class="mt-3 mb-2">{{ search }}</div>
