--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="{% static 'js/moment-with-locales-2.9.0.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'bootstrap_datepicker/js/bootstrap-datetimepicker-4.17.47.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'bootstrap_datepicker_plus/js/datepicker-widget.js' %}"></script>
-    <script src="{% static 'js/ajax.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/ajax.js' %}"></script>
 
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap-4.5.2.min.css' %}" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
