in bootstrap5 l->s, r->e e.g. pl -> ps

--- a/project/counts/templates/counts/index.html
+++ b/project/counts/templates/counts/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="col-sm-3 text-right">
-        <button type="button" class="btn btn-sm btn-outline-success js-create pr-2" data-url="{% url url_new %}"><i class="bi bi-plus"></i> Pridėti</button>
+        <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{% url url_new %}"><i class="bi bi-plus"></i> Pridėti</button>
     </div>
 </div>
 
