--- a/project/books/templates/books/index.html
+++ b/project/books/templates/books/index.html
@@ -23,8 +23,8 @@
     <div class="col-2 text-right">
         {% url 'books:books_new' as url_books %}
         {% url 'books:books_target_new' as url_books_target %}
-        <button type="button" class="btn btn-sm btn-outline-success pr-2 js-create" data-url="{{ url_books }}"><i class="bi bi-plus"></i>Knygą</button>
-        <button type="button" class="btn btn-sm btn-outline-success pr-2 js-create" data-url="{{ url_books_target }}"><i class="bi bi-plus"></i>{{ year|title }} metų tikslą</button>
+        <button type="button" class="btn btn-sm btn-outline-success pe-2 js-create" data-url="{{ url_books }}"><i class="bi bi-plus"></i>Knygą</button>
+        <button type="button" class="btn btn-sm btn-outline-success pe-2 js-create" data-url="{{ url_books_target }}"><i class="bi bi-plus"></i>{{ year|title }} metų tikslą</button>
     </div>
 </div>
 
