--- a/project/drinks/templates/drinks/includes/compare_form.html
+++ b/project/drinks/templates/drinks/includes/compare_form.html
@@ -5,6 +5,6 @@
         <div class="col"></div>
         <div class="col-sm-3 mx-1 px-0">{{ form.year1|as_crispy_field }}</div>
         <div class="col-sm-3 mx-1 px-0">{{ form.year2|as_crispy_field }}</div>
-        <div class="col-sm-1 ml-0 pl-0"><input type="button" name="date_filter" value="Filter" class="btn btn-secondary btn-sm filter_click" data-url="{% url 'drinks:compare' %}"></div>
+        <div class="col-sm-1 ms-0 ps-0"><input type="button" name="date_filter" value="Filter" class="btn btn-secondary btn-sm filter_click" data-url="{% url 'drinks:compare' %}"></div>
     </div>
 </form>
