--- a/project/expenses/templates/expenses/index.html
+++ b/project/expenses/templates/expenses/index.html
@@ -18,13 +18,13 @@
             <div class="col-sm-10">
             {% for m in context_months %}
                 {% with m|date:'n' as m_num %}
-                <button id="{{m_num}}" type="button" data-url="{% url 'expenses:expenses_month_list' m_num %}" class="btn btn-sm btn-month js-filter mr-1 {% if current_month|slugify == m_num %}btn-info{% endif %}">{{ m|date:'F'|title }}</button>
+                <button id="{{m_num}}" type="button" data-url="{% url 'expenses:expenses_month_list' m_num %}" class="btn btn-sm btn-month js-filter me-1 {% if current_month|slugify == m_num %}btn-info{% endif %}">{{ m|date:'F'|title }}</button>
                 {% endwith %}
                 {% endfor %}
-                <button id="13" type="button" data-url="{% url 'expenses:expenses_list' %}" class="btn btn-sm btn-month js-filter ml-2 {% if current_month|slugify == 13|slugify %}btn-info{% endif %}">Visi įrašai</button>
+                <button id="13" type="button" data-url="{% url 'expenses:expenses_list' %}" class="btn btn-sm btn-month js-filter ms-2 {% if current_month|slugify == 13|slugify %}btn-info{% endif %}">Visi įrašai</button>
             </div>
             <div class="col-sm-2 text-right">
-                <button type="button" id="insert_expense" class="btn btn-sm btn-outline-success pr-2 js-create" data-url="{{ url_expense_new }}"><i class="bi bi-plus"></i>Išlaidas</button>
+                <button type="button" id="insert_expense" class="btn btn-sm btn-outline-success pe-2 js-create" data-url="{{ url_expense_new }}"><i class="bi bi-plus"></i>Išlaidas</button>
             </div>
         </div>
         <div id="search_form_data" class="mt-3 mb-2">{{ search }}</div>
@@ -34,8 +34,8 @@
     <div class="col-lg-4">
         <div class="row my-2">
             <div class="col-lg-12 px-2 text-right">
-                <button type="button" class="btn btn-sm btn-outline-success pr-2 js-create" data-url="{{ url_expenses_type_new }}"><i class="bi bi-plus"></i>Išlaidų rūšį</button>
-                <button type="button" class="btn btn-sm btn-outline-success pr-2 js-create" data-url="{{ url_expenses_name_new }}"><i class="bi bi-plus"></i>Išlaidų pavadinimą</button>
+                <button type="button" class="btn btn-sm btn-outline-success pe-2 js-create" data-url="{{ url_expenses_type_new }}"><i class="bi bi-plus"></i>Išlaidų rūšį</button>
+                <button type="button" class="btn btn-sm btn-outline-success pe-2 js-create" data-url="{{ url_expenses_name_new }}"><i class="bi bi-plus"></i>Išlaidų pavadinimą</button>
             </div>
         </div>
 
