--- a/project/incomes/templates/incomes/index.html
+++ b/project/incomes/templates/incomes/index.html
@@ -17,7 +17,7 @@
         <div class="row my-2 mb-1">
             <div class="col" id="search_form_data">{{ search }}</div>
             <div class="col-auto text-right">
-                <button type="button" class="btn btn-sm btn-outline-success js-create mt-1 pr-2" data-url="{{ url_incomes }}"><i class="bi bi-plus"></i>Pajamas</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create mt-1 pe-2" data-url="{{ url_incomes }}"><i class="bi bi-plus"></i>Pajamas</button>
             </div>
         </div>
         <div id="ajax-content">{{ incomes }}</div>
@@ -26,7 +26,7 @@
     <div class="col-lg-4">
         <div class="row my-2">
             <div class="col-lg-12 px-2 text-right">
-                <button type="button" class="btn btn-sm btn-outline-success js-create pr-2" data-url="{{ url_incomes_type_new }}"><i class="bi bi-plus"></i>Pajamų rūšį</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_incomes_type_new }}"><i class="bi bi-plus"></i>Pajamų rūšį</button>
             </div>
         </div>
 
