--- a/project/plans/templates/plans/index.html
+++ b/project/plans/templates/plans/index.html
@@ -16,7 +16,7 @@
             <div class="col-lg-2 text-right">
                 {% url 'plans:incomes_plan_new' as url_incomes_new %}
                 <button type="button" class="btn btn-sm btn-outline-success px-2 js-create" data-url="{% url 'plans:copy_plans' %}"><i class="bi bi-stickies"></i> Kopijuoti planus</button>
-                <button type="button" class="btn btn-sm btn-outline-success pr-2 js-create" data-url="{{ url_incomes_new }}"><i class="bi bi-plus"></i>Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success pe-2 js-create" data-url="{{ url_incomes_new }}"><i class="bi bi-plus"></i>Įrašą</button>
             </div>
         </div>
         <div class="row mt-2">
@@ -28,7 +28,7 @@
             <div class="col-lg-10"><h6>Išlaidų planas</h6></div>
             <div class="col-lg-2 text-right">
                 {% url 'plans:expenses_plan_new' as url_expenses_new %}
-                <button type="button" class="btn btn-sm btn-outline-success pr-2 js-create" data-url="{{ url_expenses_new }}"><i class="bi bi-plus"></i>Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success pe-2 js-create" data-url="{{ url_expenses_new }}"><i class="bi bi-plus"></i>Įrašą</button>
             </div>
         </div>
         <div class="row mt-2">
@@ -40,7 +40,7 @@
             <div class="col-lg-10"><h6>Papildomų būtinų išlaidų planas</h6></div>
             <div class="col-lg-2 text-right">
                 {% url 'plans:necessarys_plan_new' as url_necessary_new %}
-                <button type="button" class="btn btn-sm btn-outline-success pr-2 js-create" data-url="{{ url_necessary_new }}"><i class="bi bi-plus"></i>Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success pe-2 js-create" data-url="{{ url_necessary_new }}"><i class="bi bi-plus"></i>Įrašą</button>
             </div>
         </div>
         <div class="row mt-2">
@@ -54,7 +54,7 @@
             </div>
             <div class="col-lg-2 text-right">
                 {% url 'plans:savings_plan_new' as url_savings_new %}
-                <button type="button" class="btn btn-sm btn-outline-success pr-2 js-create" data-url="{{ url_savings_new }}"><i class="bi bi-plus"></i>Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success pe-2 js-create" data-url="{{ url_savings_new }}"><i class="bi bi-plus"></i>Įrašą</button>
             </div>
         </div>
         <div class="row mt-2">
@@ -68,7 +68,7 @@
             </div>
             <div class="col-lg-2 text-right">
                 {% url 'plans:days_plan_new' as url_day_new %}
-                <button type="button" class="btn btn-sm btn-outline-success pr-2 js-create" data-url="{{ url_day_new }}"><i class="bi bi-plus"></i>Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success pe-2 js-create" data-url="{{ url_day_new }}"><i class="bi bi-plus"></i>Įrašą</button>
             </div>
         </div>
         <div class="row mt-2">
