--- a/project/expenses/templates/expenses/includes/expenses_list.html
+++ b/project/expenses/templates/expenses/includes/expenses_list.html
@@ -22,12 +22,12 @@
         {% url 'expenses:expenses_delete' item.id as url_delete %}
         {% ifchanged item.date|date:"F" %}<tr>{% if not forloop.first %}<td colspan="10" class="row-spacer"></td>{% endif %}</tr>{% endifchanged %}
         <tr data-url="{{ url_update }}" class="{{ item.expense_type.pk|bg_color }} dblclick">
-            <td class="text-left {%if item.exception %}expense-exception"{% else %}expense-ordinary"{% endif %}>{{ item.date|date:"Y-m-d" }}</td>
-            <td class="text-left">{{ item.expense_type }}</td>
-            <td class="text-left">{{ item.expense_name }}</td>
+            <td class="text-start {%if item.exception %}expense-exception"{% else %}expense-ordinary"{% endif %}>{{ item.date|date:"Y-m-d" }}</td>
+            <td class="text-start">{{ item.expense_type }}</td>
+            <td class="text-start">{{ item.expense_name }}</td>
             <td>{{ item.quantity }}</td>
             <td>{{ item.price|intcomma }}</td>
-            <td class="text-left">{{ item.remark|linebreaksbr }}</td>
+            <td class="text-start">{{ item.remark|linebreaksbr }}</td>
             <td>{% if item.attachment %}<a href="{{ item.attachment.url }}" target="_blank">Žiūrėti</a>{% endif %}</td>
             <td>{{ item.account }}</td>
             <td class="no-right-border">
