expenses forms style updates

--- a/project/expenses/templates/expenses/includes/expenses_form.html
+++ b/project/expenses/templates/expenses/includes/expenses_form.html
@@ -3,33 +3,21 @@
 {% generic_form title='Išlaidos' update_container='expenses_list' chained_dropdown=chained_url %}
 
 <style>
-    .form-check {
-        padding: .35rem 0 0 0;
-    }
     .exception {
         margin-top: 2rem;
     }
     #div_sum_prices {
-        padding-top: 0.3rem;
         padding-left: 0;
         margin-left: 0;
         text-align: right;
     }
-    #div_id_exception {
-        padding: 0.5rem 0 0 0;
-        text-align: left;
-    }
     label[for=attachment-clear_id] {
         padding-top: .25rem;
     }
-    .form-control.d-flex {
-        padding: 0 .25rem;
-        padding-right: 5px;
-        margin: 0;
-    }
-    .text-break {
-        margin-top: auto;
-        margin-bottom: auto;
+    input.form-check-input {
+        height: 1em!important;
+        padding: 0;
+        margin-top: .35rem;
     }
 </style>
 
