--- a/project/static/css/app_global.css
+++ b/project/static/css/app_global.css
@@ -140,6 +140,14 @@ tr.top-text, tr.top-text th {
     font-size: .7rem!important;
 }
 
+.input-group-text {
+    padding: .425rem .75rem;
+    border-top-right-radius: .25rem;
+    border-bottom-right-radius: .25rem;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
 .btn-sm {
   padding: .2rem .3rem;
 }
