--- a/project/core/templates/core/includes/generic_form.html
+++ b/project/core/templates/core/includes/generic_form.html
@@ -6,8 +6,7 @@
     <script type="text/javascript" src="{% static 'bootstrap_datepicker_plus/js/datepicker-widget.js' %}"></script>
     <div class="modal-header">
         <h5 class="modal-title">{{ title }}</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></span>
         </button>
     </div>
     <div class="modal-body">
@@ -21,7 +20,7 @@
 
         {% for field in form %}
         <div class="row align-items-center">
-            <div class="col-sm-4">{{ field.label_tag }}</div>
+            <div class="col-sm-4 mb-3">{{ field.label_tag }}</div>
             <div class="col-sm-8">
             {% if field.html_name == 'total_sum' %}
             <div class="row">
@@ -38,7 +37,7 @@
     <div class="modal-footer">
         <button type="button" class="btn btn-sm btn-primary" id="submit">{{ action|title }}</button>
         {% if action != 'update' %}<button type="button" class="btn btn-sm btn-primary" id="save_close">Save and Close</button>{% endif %}
-        <button type="button" class="btn btn-sm btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">Close</button>
     </div>
 </form>
 
