--- a/project/expenses/templates/expenses/index.html
+++ b/project/expenses/templates/expenses/index.html
@@ -28,7 +28,7 @@
             </div>
         </div>
 
-        <div id="search_form_data" class="mb-3 mt-4">{{ search }}</div>
+        <div id="search_form_data" class="mt-4">{{ search }}</div>
         <div id="expenses_list">{{ expenses_list }}</div>
     </div>
 
