--- a/project/expenses/templates/expenses/includes/expenses_type_list.html
+++ b/project/expenses/templates/expenses/includes/expenses_type_list.html
@@ -20,7 +20,9 @@
                 {% url 'expenses:expenses_name_update' sub.id as url_name_update %}
                 <div class="list-group-item" data-url="{{ url_name_update }}">{{ sub.title }}
                     {% if sub.valid_for %}<span class="badge badge-secondary">{{ sub.valid_for|safe }}</span>{% endif %}
-                    <span style="position: absolute; top: 0.25rem; right: 30px; display: block;"><button type="button" data-url="{{ url_name_update }}" class="btn btn-super-sm edit js-create"><i class="bi bi-pencil-fill"></i></button>
+                    <span style="position: absolute; top: 0.25rem; right: 30px; display: block;">
+                        <button type="button" data-url="{{ url_name_update }}" class="btn btn-super-sm edit js-create"><i class="bi bi-pencil-fill"></i></button>
+                    </span>
                 </div>
                 {% endfor %}
             </div>
