--- a/project/incomes/templates/incomes/index.html
+++ b/project/incomes/templates/incomes/index.html
@@ -12,20 +12,20 @@
 
 {% url 'incomes:incomes_new' as url_incomes %}
 {% url 'incomes:incomes_type_new' as url_incomes_type_new %}
-<div class="row mt-2 px-2">
+<div class="row px-2">
     <div class="col-lg-8 px-1">
-        <div class="row my-2 mb-1">
+        <div class="row my-2">
             <div class="col" id="search_form_data">{{ search }}</div>
-            <div class="col-auto text-right">
-                <button type="button" class="btn btn-sm btn-outline-success js-create mt-1 pe-2" data-url="{{ url_incomes }}"><i class="bi bi-plus"></i>Pajamas</button>
+            <div class="col-auto text-end">
+                <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_incomes }}"><i class="bi bi-plus"></i>Pajamas</button>
             </div>
         </div>
         <div id="ajax-content">{{ incomes }}</div>
     </div>
 
     <div class="col-lg-4">
-        <div class="row my-2">
-            <div class="col-lg-12 px-2 text-right">
+        <div class="row mt-2 incomes-types-col">
+            <div class="col-lg-12 px-2 text-end">
                 <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_incomes_type_new }}"><i class="bi bi-plus"></i>Pajamų rūšį</button>
             </div>
         </div>
@@ -35,6 +35,12 @@
         </div>
     </div>
 </div>
+
+<style>
+    .incomes-types-col {
+        margin-bottom: 1.1rem;
+    }
+</style>
 
 {% include 'modal.html' %}
 <script type="text/javascript" src="{% static 'js/search.js' %}"></script>
