--- a/project/books/templates/books/includes/books_list.html
+++ b/project/books/templates/books/includes/books_list.html
@@ -16,7 +16,7 @@
         {% for item in items %}
         {% url 'books:books_update' item.id as url_update %}
         {% url 'books:books_delete' item.id as url_delete %}
-        {% ifchanged item.started|date:"Y" %}<tr>{% if not forloop.first %}<td colspan="8" class="book-spacer"></td>{% endif %}</tr>
+        {% ifchanged item.started|date:"Y" %}{% if not forloop.first %}<tr class="table-active"><td colspan="8"></td></tr>{% endif %}
         {% endifchanged %}
         <tr data-url="{{ url_update }}?tab={{ tab }}" class="dblclick{% if not item.ended %} teal{% endif %}">
             <td class="text-left">{{ forloop.revcounter }}</td>
@@ -43,10 +43,5 @@
 <style>
     .teal {
         background-color: #8ce7c2!important;
-    }
-
-    .book-spacer {
-        background-color: rgb(218, 238, 250);
-        height: .65rem;
     }
 </style>
