--- a/project/counts/templates/counts/includes/counts_list.html
+++ b/project/counts/templates/counts/includes/counts_list.html
@@ -11,7 +11,7 @@
         {% for item in items %}
         {% url url_update item.id as url_upd %}
         {% url url_delete item.id as url_dlt %}
-        {% ifchanged item.date|date:"F" %}<tr>{% if not forloop.first %}<td colspan="4" class="row-spacer"></td>{% endif %}</tr>
+        {% ifchanged item.date|date:"F" %}{% if not forloop.first %}<tr class="table-active"><td colspan="4"></td></tr>{% endif %}
         {% endifchanged %}
         <tr data-url="{{ url }}" class="dblclick">
             <td class="text-left">{{ item.date|date:"Y-m-d" }}</td>
