--- a/project/drinks/templates/drinks/includes/drinks_list.html
+++ b/project/drinks/templates/drinks/includes/drinks_list.html
@@ -11,7 +11,7 @@
         {% for item in items %}
         {% url 'drinks:drinks_update' item.id as url_update %}
         {% url 'drinks:drinks_delete' item.id as url_delete %}
-        {% ifchanged item.date|date:"F" %}<tr>{% if not forloop.first %}<td colspan="4" class="row-spacer"></td>{% endif %}</tr>
+        {% ifchanged item.date|date:"F" %}{% if not forloop.first %}<tr class="table-active"><td colspan="4"></td></tr>{% endif %}
         {% endifchanged %}
         <tr data-url="{{ url_update }}" class="dblclick">
             <td class="text-left">{{ item.date|date:"Y-m-d" }}</td>
