--- a/project/expenses/templates/expenses/includes/expenses_list.html
+++ b/project/expenses/templates/expenses/includes/expenses_list.html
@@ -20,7 +20,7 @@
         {% for item in items %}
         {% url 'expenses:expenses_update' item.id as url_update %}
         {% url 'expenses:expenses_delete' item.id as url_delete %}
-        {% ifchanged item.date|date:"F" %}<tr>{% if not forloop.first %}<td colspan="10" class="row-spacer"></td>{% endif %}</tr>{% endifchanged %}
+        {% ifchanged item.date|date:"F" %}{% if not forloop.first %}<tr class="table-active"><td colspan="10"></td></tr>{% endif %}{% endifchanged %}
         <tr data-url="{{ url_update }}" class="{{ item.expense_type.pk|bg_color }} dblclick">
             <td class="text-start {%if item.exception %}expense-exception"{% else %}expense-ordinary"{% endif %}>{{ item.date|date:"Y-m-d" }}</td>
             <td class="text-start">{{ item.expense_type }}</td>
