--- a/project/books/templates/books/includes/books_list.html
+++ b/project/books/templates/books/includes/books_list.html
@@ -16,7 +16,7 @@
         {% for item in items %}
         {% url 'books:books_update' item.id as url_update %}
         {% url 'books:books_delete' item.id as url_delete %}
-        {% ifchanged item.started|date:"Y" %}{% if not forloop.first %}<tr class="table-active"><td colspan="8"></td></tr>{% endif %}
+        {% ifchanged item.started|date:"Y" %}{% if not forloop.first %}<tr><td colspan="8" class="table-active"></td></tr>{% endif %}
         {% endifchanged %}
         <tr data-url="{{ url_update }}?tab={{ tab }}" class="dblclick{% if not item.ended %} teal{% endif %}">
             <td class="text-left">{{ forloop.revcounter }}</td>
