--- a/project/books/templates/books/index.html
+++ b/project/books/templates/books/index.html
@@ -20,7 +20,7 @@
 
     <div class="col text-center" id="info_row">{{ info_row }}</div>
 
-    <div class="col-2 text-right">
+    <div class="col-2 text-end">
         {% url 'books:books_new' as url_books %}
         {% url 'books:books_target_new' as url_books_target %}
         <button type="button" class="btn btn-sm btn-outline-success pe-2 js-create" data-url="{{ url_books }}"><i class="bi bi-plus"></i>Knygą</button>
